Add dotenv to GEM

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-FACEBOOK_API: "1589784584597402"
-FACEBOOK_SECRET: "542746549c7f640dea96e1b4fee79bb5"
+FACEBOOK_API= "1589784584597402"
+FACEBOOK_SECRET= "542746549c7f640dea96e1b4fee79bb5"
+PUSHER_API= '91569c5c673c35038cea'
